# aptapy

./: .gitignore  README.md  noxfile.py  pyproject.toml  setup.sh
.github/workflows/: pypi.yml
aptapy/: modeling.py  plotting.py  typing.py
docs/: conf.py  hist.rst  index.rst  install.rst  modeling.rst  models.rst  plotting.rst  release_notes.rst  strip.rst  team.rst
docs/_scripts/: scipy_rv_continuous.py  sigmoids.py
docs/examples/: 3d_histogram.py  GALLERY_HEADER.rst  composite_fit.py  constrained_fit.py  dark_theme.py  exponential_fit.py  gaussian_forest.py  hist_arithmetics.py  interactive_cursor.py  peak_models.py  sigmoid_models.py  simple_fit.py  simple_hist1d.py  weighted_hist1d.py  xkcd_theme.py
docs/examples/data/: exponential_data.txt
src/aptapy/: hist.py  modeling.py  models.py  plotting.py  strip.py
src/aptapy/styles/: aptapy.mplstyle
tests/: conftest.py  test_fit_errors.py  test_hist.py  test_modeling.py  test_models.py  test_plotting.py  test_rv_continuous_models.py  test_scipy_models.py  test_sigmoid_models.py  test_sigmoids.py  test_simple_models.py  test_strip.py  test_sum_models.py
