[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "aptapy"
version = "0.0.1"
description = "Statistical tools for online monitoring and analysis"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "cycler",
    "loguru",
    "numpy",
    "scipy",
    "matplotlib",
    "sphinx-book-theme",
]
license = { file = "LICENSE" }
authors = [{ name = "Luca Baldini" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[project.urls]
Homepage = "https://github.com/lucabaldini/aptapy"
Issues = "https://github.com/lucabaldini/aptapy/issues"

[tool.hatch.build.targets.wheel]
packages = ["aptapy"]

[tool.hatch.build]
include = ["aptapy/py.typed"]

[tool.ruff]
target-version = "py37"
line-length = 100
src = ["."]
namespace-packages = ["aptapy"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort (imports)
  "B",   # flake8-bugbear
  "UP",  # pyupgrade (kept safe for py37)
  "SIM", # flake8-simplify
  "C4",  # flake8-comprehensions
  "NPY", # NumPy-specific best practices
  "PERF" # performance gotchas
]
ignore = [

]
